[package]
name = "dynamixel"
version = "0.0.0"
authors = ["Kjetil Kjeka <kjetilkjeka@gmail.com>"]

[dependencies]
bit_field = "0.9.0"
serialport = {version = "2.0", optional = true}
log = "0.4"

[features]
default = []
std = ["log/std"]

[dev-dependencies]
badlog = "1.1"
serialport = "2.0"

[[example]]
name = "serialport"
required-features = ["std", "serialport"]
