[package]
name = "dynamixel"
description = "A (soon to be) full featured dynamixel servo library in rust"
version = "0.1.1"

authors = ["Kjetil Kjeka <kjetilkjeka@gmail.com>"]

repository = "https://github.com/kjetilkjeka/dynamixel.rs"
readme = "README.md"

keywords = ["servo", "dynamixel", "rs485"]
categories = ["no-std", "embedded", "hardware-support"]

license = "MIT OR Apache-2.0"

[dependencies]
bit_field = "0.9.0"
serialport = {version = "2.1", optional = true}
log = "0.4"

[features]
default = []
std = ["log/std"]

[dev-dependencies]
badlog = "1.1"
serialport = "2.1"

[[example]]
name = "serialport"
required-features = ["std", "serialport"]

[badges]
travis-ci = { repository = "kjetilkjeka/dynamixel.rs", branch = "master" }
